MARP-4488 NPE on start process with strange PID (#200)
* Adding jar to sonar scan
* Fix NPE
* Remove import
* Handle sonar